c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/extra_credit/switch_void.c
// Can't use void controlling expression in switch statement
void f(void) {
    return;
}

int main(void) {
    switch(f()) {
        default: return 0;
    }
}